refactor: add config

--- a/packages/theme-default/src/components/SideMenu.less
+++ b/packages/theme-default/src/components/SideMenu.less
@@ -349,6 +349,10 @@
       padding-top: 50px;
       background: transparent;
 
+      .dark & {
+        background-color: #262626;
+      }
+
       .@{prefix}-menu-nav,
       .@{prefix}-menu-header {
         display: none;
